--- a/.editorconfig
+++ b/.editorconfig
@@ -8,6 +8,20 @@ indent_size = 2
 insert_final_newline = true
 trim_trailing_whitespace = true
 
+[*.html]
+charset = utf-8
+indent_style = space
+indent_size = 4
+insert_final_newline = true
+trim_trailing_whitespace = true
+
+[*.css]
+charset = utf-8
+indent_style = space
+indent_size = 4
+insert_final_newline = true
+trim_trailing_whitespace = true
+
 [*.ts]
 quote_type = single
 ij_typescript_use_double_quotes = false
